--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,23 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #567841;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #455f36;
+}
